--- a/index.html
+++ b/index.html
@@ -5,60 +5,62 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div id="header"></div>
-        <div id="logo">Header Logo</div>
-        <div id="links">
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="links">
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-    <div id="hero">
-        <div id="hero-text">
+    </div>
+
+    <div class="hero">
+        <div class="hero-text">
             <h1>This website is awesome.</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button>Sign up</button>
         </div>
-        <div id="hero-image">
+        <div class="hero-image">
             <p>this is a placeholder for an image</p>
         </div>
     </div>
-    <div id="random-info">
-        <div id="random-title">Some random information</div>
-        <div id="random-cards">
-            <div id="card">
-                <div id="card-image"></div>
-                <div id="card-text">this is some subtext under an illustration or image</div>
+    <div class="random-info">
+        <div class="random-title">Some random information</div>
+        <div class="random-cards">
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
-            <div id="card">
-                <div id="card-image"></div>
-                <div id="card-text">this is some subtext under an illustration or image</div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
-            <div id="card">
-                <div id="card-image"></div>
-                <div id="card-text">this is some subtext under an illustration or image</div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
-            <div id="card">
-                <div id="card-image"></div>
-                <div id="card-text">this is some subtext under an illustration or image</div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
-    <div id="quote">
+    <div class="quote">
         <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will 
             actually read it. Who knows? All I know is that it looks nice.</blockquote>
         <p>-Thor, God of Thunder</p>
     </div>
-    <div id="call">
-        <div id="call-text">
+    <div class="call">
+        <div class="call-text">
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>
-        <div id="call-button">
+        <div class="call-button">
             <button>Sign up</button>
         </div>
     </div>
-    <div id="footer">Copyright © The Odin Project 2021</div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
